Fix placement of searchform on mobile screens. I'd like to keep this modification once the campaign is over.

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -516,6 +516,18 @@ form#searchform {
     right: 4em;
 }
 
+@media all and (max-width: 479px) {
+    .searchform  {
+        background: #3a2354;
+        height: 3em;
+    }
+    form#searchform {
+        position: relative;
+        top: 0.5em !important;
+        right: auto !important;
+    }
+}
+
 div#feedlink {
     margin-top: 18px;
 }
